# c-library

./: CMakeLists.txt  README.md  build
.devcontainer/: Dockerfile  devcontainer.json
inc/: ring_buffer.h
interface/: camera.h  camera_one.c  camera_two.c  intf.h
lib/interface/: CMakeLists.txt  camera.h  camera_one.h  camera_two.h  intf.c  intf.h
lib/ring_buffer/: CMakeLists.txt  ring_buffer.c  ring_buffer.h
lib/state_machine/: CMakeLists.txt  state_machine.c  traffic_light.h
ring_buffer/: ring_buffer.c  ring_buffer.h
src/: CMakeLists.txt  main.c  ring_buffer.c
state_machine/: state_machine.h  traffic_light.c
test/: CMakeLists.txt  ring_buffer-test.cpp  ring_buffer.cpp
tests/: CMakeLists.txt  interface-test.cpp  ring_buffer-test.cpp  state_machine-test.cpp
